--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 # .NET Core build folders
 bin/
 obj/
+appsettings.json
+appsettings.Development.json
 
 # Common node modules locations
 /node_modules
