--- a/BigMacApi/BigMacApi.csproj
+++ b/BigMacApi/BigMacApi.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>big_mac_api</RootNamespace>
+    <RootNamespace>BigMacApi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
