--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ bin/
 obj/
 appsettings.json
 appsettings.Development.json
+appsettings.Production.json
 
 # Common node modules locations
 /node_modules
